--- a/theme1/theme.toml
+++ b/theme1/theme.toml
@@ -1,6 +1,6 @@
-name = "hello-friend-ng"
+name = "Flewidity"
 license = "MIT"
-licenselink = "https://github.com/rhazdon/hugo-theme-hello-friend-ng/blob/master/LICENSE.md"
+licenselink = "https://github.com/rhazdon/hugo-theme-flewidity/blob/master/LICENSE.md"
 description = "A simple theme for Hugo. That's it."
 tags = ["blog", "clean", "customizable", "dark", "highlighting", "light", "minimal", "monochromatic", "multilingual", "personal", "responsive", "simple", "technical"]
 features = ["blog", "shortcode", "syntax highlighting"]
